--- a/src/App.css
+++ b/src/App.css
@@ -5546,7 +5546,7 @@ a.close.disabled {
   position: relative;
   flex: 1 1 auto;
   padding: 1rem;
-  margin-top: 125px;
+  margin-top: 32px;
   background-color: black;
 }
 
@@ -10168,6 +10168,57 @@ img::-moz-selection {
     margin-right: 0;
   }
 }
+
+/* For header in project text */
+header.mastheadproject {
+  padding-top: 10.5rem;
+  padding-bottom: 6rem;
+  text-align: center;
+  color: #fff;
+  background-image: url("../src/assets/img/arch_mast.jpg");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+}
+header.mastheadproject .mastheadproject-subheading {
+  font-size: 1.5rem;
+  font-style: italic;
+  line-height: 1.5rem;
+  margin-bottom: 25px;
+  font-family: "Droid Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+header.mastheadproject .mastheadproject-heading {
+  font-size: 3.25rem;
+  font-weight: 700;
+  line-height: 3.25rem;
+  margin-bottom: 2rem;
+  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+
+
+
+@media (min-width: 768px) {
+  header.mastheadproject {
+    padding-top: 7rem;
+    padding-bottom: 4.5rem;
+  }
+  header.mastheadproject .mastheadproject-subheading {
+    font-size: 2.25rem;
+    font-style: italic;
+    line-height: 2.25rem;
+    margin-bottom: 2rem;
+  }
+  header.mastheadproject .mastheadproject-heading {
+    font-size: 3.5rem;
+    font-weight: 700;
+    line-height: 4.5rem;
+    margin-bottom: 4rem;
+  }
+}
+
+/* Main masthead CSS below */
 header.masthead {
   padding-top: 10.5rem;
   padding-bottom: 6rem;
